Fix mega menu positioning and hide scrollbars
- Remove gap between mega menu and navigation links
- Hide scrollbars on all mega menu scrollable elements
- Revert dynamic positioning to fixed top values
- Increase search bar max-width to 800px

--- a/public/scss/_responsive.scss
+++ b/public/scss/_responsive.scss
@@ -315,8 +315,7 @@
   @media (max-width: 767px) {
     .logo-header img {
       max-width: 100% !important;
-      min-height: 60px !important;
-      max-height: 70px !important;
+      
     }
   }
   .canvas-mb {
@@ -1800,7 +1799,7 @@
   }
   .header-style-4 {
     .wrapper-header {
-      min-height: 103px;
+      min-height: 55px;
     }
   }
   .header-absolute {
